works/out-of-context/style.css
body {
  margin: 0px;
}
a:link,
a:visited,
a:hover {
  color: black;
}
.parallax-window {
    min-height:900px;
    background: transparent;
}
.project-title{
  font-weight: 400;
  position:relative;
  top:-700px;
  font-family: "Libre Caslon Text", serif;
  font-style: italic;
  line-height: 0.9;
  color:white;
  text-align:center;
  z-index:2;
}
.image-row{
    width: 1600px;
    max-width: 100%;
    margin: auto;
}
.image-row img {
  max-width:100%;
}
.grid-container{
    margin-top: -230px;
}
.about-project{
    max-width:100%;
  font-family: "Libre Caslon Text", serif;
  position:relative;
}
.left{
    text-align:right;
    padding-right:30px;
}
.right{
    text-align:justify;
    text-justify: inter-word;
    max-width:420px;
    width:97%;
    font-style: italic;
}
.about {
  font-family: "Libre Caslon Text", serif;
  font-style: italic;
  position: absolute;
  top: 30px;
  right: 30px;
  z-index: 99;
  color:white;
}
.copyrights{
    text-align:center;
    font-family:"Libre Caslon Text", serif;
    font-style: italic;
    font-size:12px;
    margin-top:50px;
    margin-bottom:30px;
}
@media only screen and (min-width: 1125px){
  .image-row{
    margin-top:10px;
}
.project-title{
  font-size: 9rem;
}
.about-project{
  top:-340px;
}
}

@media only screen and (max-width:1125px){
  .image-row img {
    margin-top: 10px;
  }

.project-title{
  font-size: 4.5rem;
}
.about-project{
  top:-200px;
}
.about-project div{
  padding-left:50px;
}
.left{
  text-align: left;
}
}
@media only screen and (max-width:750px){

.parallax-window{
  background-position: center top !important;
}
.image-row img {
    object-fit:cover;
  }
}

